app/assets/stylesheets/components/_pantry_card.scss
.pantry-navbar {
  position: sticky;
  top: 0;
  z-index: 1000;
  background-color: white;
}

.ingredient-card {
  padding: 5px 12px;
  background-color: white;
  border: none;
  margin: 8px;
  border-radius: 16px;
  position: relative;
  box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.1);
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.card-picture-box {
  display: flex;
  overflow: hidden;
  width: 80px;
  height: 80px;
  margin-top: 8px;
}

.card-image {
  height: 100%;
  width: 100%;
}

.card-info {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.card-title {
  margin: 0px;
  font-size: 20px;
  font-weight: bold;
  overflow: visible;
  white-space: normal;
  // max-width: calc(100% - 150px);
}

.amount-and-unit {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 4px;
}

.ingredient-card-icons {
  display: flex;
  flex-direction: column;
  gap: 8px;
  align-items: center;
}

.ingredient-card-icons button {
  border: none;
  background: none;
  padding: 0;
}

.expire-icon, .delete-icon {
  display: block;
  text-align: center;
}

.expire-icon {
  color: $ft-pink;
  font-size: 1.5em;
}

.delete-icon {
  color: grey;
}

.delete-icon:hover {
  color: black;
}

.expiring-notice {
  background: gray;
  border-radius: 8px;
  padding: 4px;
  color: white;
}

.expired-notice {
  background: $ft-pink;
  border-radius: 8px;
  padding: 4px;
  color: white;
}

.edit-field {
  border-radius: 16px;
  outline: none;
  background-color: var(--bs-body-bg);

}

.edit-field:focus {
  box-shadow: 0 0 0 3px rgba(0, 123, 255, 0.5); /* Adjust color and size as needed */
  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
  border: var(--bs-border-width) solid var(--bs-border-color);
}

